syntax = "proto3";

option csharp_namespace = "UsersService";

package greet;

service UsersService {
  rpc Create (CreateUserRequest) returns (CreateUserResponse);
  rpc Update (UpdateUserRequest) returns (UpdateUserResponse);
  rpc Delete (DeleteUserRequest) returns (DeleteUserResponse);
  rpc Get (GetUserRequest) returns (GetUserResponse);
  rpc GetAll (Empty) returns (UsersResponse);
}

message Error {
	string message = 1;
	int32 code = 2;
}

message UserResponse{
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string hash_password = 3;
}

message CreateUserResponse {
  oneof response {
	  int32 id = 1;
	  Error error = 2;
  }
}

message UpdateUserRequest {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string hash_password = 4;
}

message UpdateUserResponse {
  oneof response {
	  bool is_success = 1;
	  Error error = 2;
  }
}

message DeleteUserRequest {
  int32 id = 1;
}

message DeleteUserResponse {
  oneof response {
	  bool is_success = 1;
	  Error error = 2;
  }}

message GetUserRequest{
  int32 id = 1;
}

message GetUserResponse{
  oneof response {
	  UserResponse user = 1;
	  Error error = 2;
  }
}


message Empty { }

message UsersResponse{
	repeated UserResponse users = 1;
}
